[package]
name = "docpars"
version = "0.3.0"
authors = ["Denis Isidoro <denis_isidoro@live.com>"]
edition = "2018"
description = "Ultra-fast parser for declarative command-line options"
homepage = "https://github.com/denisidoro/docpars"
documentation = "https://github.com/denisidoro/docpars"
repository = "https://github.com/denisidoro/docpars"
keywords = ["argument", "parser", "cli", "bash", "shell"]
categories = ["command-line-utilities"]
license = "Apache-2.0"

[dependencies]
docopt = "1.1.1"

[lib]
name = "docpars"
path = "src/lib.rs"

[[bin]]
name = "docpars"
path = "src/bin/main.rs"
bench = false
